# NeuralNetworks

./: CMakeLists.txt  LICENSE  README.md  main.cpp  main.cu
data/: iris_training.train
docs/: Doxyfile
docs/html/: _activations_8hpp.html  _activations_8hpp_source.html  _cost_functions_8hpp.html  _cost_functions_8hpp_source.html  _dropoutand_regularization_8hpp.html  _dropoutand_regularization_8hpp_source.html  _f_f_network_8cpp.html  _f_f_network_8hpp.html  _f_f_network_8hpp_source.html  _r_e_a_d_m_e_8md.html  annotated.html  class_f_f_network-members.html  class_f_f_network.html  classcu_f_f_network.html  classdata_reader-members.html  classdata_reader.html  classes.html  cu_f_f_network_8h.html  cu_f_f_network_8h_source.html  data_reader_8cpp.html  data_reader_8hpp.html  data_reader_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_eval.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  index.html  main_8cpp.html  md__r_e_a_d_m_e.html  menudata.js  pages.html  struct_f_f_layer-members.html  struct_f_f_layer.html  (+2 more)
docs/html/search/: all_0.js  all_1.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+20 more)
include/: Activations.hpp  CostFunctions.hpp  DropoutandRegularization.hpp  FFNetwork.hpp  Network.hpp  cuFFNetwork.h  cuFFNetwork.hpp  cudaKernels.hpp  dataReader.hpp
include_v2/: Layer.hpp  Network.hpp  Tensor.hpp  utility.hpp
scripts/: mnist_loader.py
src/: FFNetwork.cpp  Network.cpp  cuFFNetwork.cu  cudaKernels.cu  dataReader.cpp
src_v2/: Layer.cu  Network.cu  Tensor.cu
